k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushup-ingress
  namespace: pushup
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pushups.micman.cz
      secretName: pushup-tls
  rules:
    - host: pushups.micman.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pushup-app
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushup-ingress-http
  namespace: pushup
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: mia-system-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pushups.micman.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pushup-app
                port:
                  number: 3000
